# Filterki

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
config/: CMakeLists.txt  config.h.in
data/layout/: form.txt
data/shaders/: blurAverage.frag  blurGaussian2D.frag  sobel.frag  sobelColor.frag
include/: config.h
include/filterki/: filterki.h
src/: CMakeLists.txt  filterki.cpp
